# duke-ml-2026-chatbots

./: .env.example  .gitignore  README.md  extend-your-chatbot.ipynb  pyproject.toml  requirements.txt
PRDs/: 01_example-prompts.md  02_verbosity.md  03_max-output-tokens.md  05_tool-calling.md  tool-calling.md  truncation.md
level-1-chat/: README.md  build-a-chatbot.ipynb
level-1-chat-streaming/: README.md  build-a-streaming-chatbot.ipynb
level-1-chat-streaming/gradio/: chat.py
level-1-chat-streaming/python/: chat.py
level-1-chat-streaming/typescript/: chat.ts  package-lock.json  package.json  tsconfig.json
level-1-chat/gradio/: chat.py
level-1-chat/python/: chat.py  chat_responses_only.py
level-1-chat/typescript/: chat.ts  package-lock.json  package.json  tsconfig.json
level-2-files/: README.md  build-a-file-upload-chatbot.ipynb
level-2-files/python/: chat.py
level-2-files/sample-files/: sample.txt
level-2-files/typescript/: chat.ts  package-lock.json  package.json  tsconfig.json
level-3-web/: CONCEPTS.md  README.md
level-3-web/flask/: app.py
level-3-web/flask/static/: app.js  style.css
level-3-web/flask/templates/: index.html
level-3-web/gradio/: app.py
level-3-web/nextjs/: package-lock.json  package.json  tsconfig.tsbuildinfo
level-3-web/nextjs/src/app/: globals.css  layout.tsx  page.tsx
level-3-web/nextjs/src/components/: chat-input.tsx  chat-interface.tsx  file-preview.tsx  message-bubble.tsx  message-list.tsx  settings-panel.tsx
level-3-web/nextjs/src/hooks/: use-chat.ts
level-3-web/nextjs/src/lib/: utils.ts
(+2 files in other folders)
